MDEV-35554 call to function show_binlog_space_total()

through pointer to incorrect function type.

The argument is void* rather than char*.

This shows up with UBSAN testing under clang.